# Ollama-Omega

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  ollama_mcp_server.py  pyproject.toml
docs/: BUILD_SPEC.md
examples/: basic_usage.py
tests/: __init__.py  test_server.py
