[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-omega"
version = "1.0.0"
description = "Sovereign Ollama Bridge — MCP server for local and cloud Ollama models"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "RJ Lopez", email = "vrtxomega@users.noreply.github.com"}]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/VrtxOmega/Ollama-Omega"
Repository = "https://github.com/VrtxOmega/Ollama-Omega"
Issues = "https://github.com/VrtxOmega/Ollama-Omega/issues"

[tool.setuptools]
py-modules = ["ollama_mcp_server"]
